--- a/Abrar-Chapter2/Tasks/T_removing_an_offline_managed_system_navigator_item.dita
+++ b/Abrar-Chapter2/Tasks/T_removing_an_offline_managed_system_navigator_item.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
 <task id="T_removing_an_offline_managed_system_navigator_item">
-    <title>Removing an Offline Managed System Navigator Item</title>
+    <title>Procedure</title>
     <prolog>
         <author>Abrar Ahmed Syed</author>
         <metadata>
