--- a/Sridevi-Chapter1/Concepts/C_marvel_enterprise_portal_tour.dita
+++ b/Sridevi-Chapter1/Concepts/C_marvel_enterprise_portal_tour.dita
@@ -4,7 +4,7 @@
     <title>Marvel Enterprise Portal Tour</title>
     <shortdesc></shortdesc>
     <prolog>
-        <author>Abrar Ahmed Syed</author>
+        <author>Sridevi</author>
         <metadata>
             <keywords>
                 <indexterm><keyword>Major features</keyword><keyword>Portal tour
