--- a/Abrar-Chapter2/Chapter2.ditamap
+++ b/Abrar-Chapter2/Chapter2.ditamap
@@ -2,15 +2,20 @@
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
     <title>Using the Navigator</title>
-    <topicref href="Concepts/C_Using_the_Navigator.dita"/>
     <topicref href="Concepts/C_navigator_overview.dita"/>
     <topichead navtitle="Types of Navigator Views">
         <topicref href="Concepts/C_Navigator_Physical_view.dita"/>
         <topicref href="Concepts/C_Custom_Navigator_views.dita"/>
         <topicref href="Concepts/C_Navigator_Logical_view.dita"/>
     </topichead>
-    <topicref href="Tasks/T_expanding_the_navigator_in_increments.dita"/>
+    <topicref href="Tasks/T_expanding_the_navigator_in_increments.dita">
+        <topicref href="Concepts/C_logical_and_custom_navigator_views.dita"/>
+    </topicref>
     <topicref href="Tasks/T_collapsing_and_expanding_the_navigator.dita"/>
     <topicref href="Tasks/T_finding_navigator_items.dita"/>
-    <topicref href="Tasks/T_removing_an_offline_managed_system_navigator_item.dita"/>
+    <topicref href="Concepts/C_removing_an_offline_managed_system_navigator_item.dita">
+        <topicref href="Tasks/T_removing_an_offline_managed_system_navigator_item.dita">
+            <topicref href="Concepts/C_removing_an_offline_mgd_sys_nav_item_next_steps.dita"/>
+        </topicref>
+    </topicref>
 </map>
