--- a/Abrar-Chapter5/chapter5.ditamap
+++ b/Abrar-Chapter5/chapter5.ditamap
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
-    <title>Chapter5</title>
+    <title>Custom Workspaces</title>
     <topicref href="Concepts/C_customizing_workspaces.dita"/>
     <topicref href="Concepts/C_custom_workspace_options_and_guidelines.dita">
         <topicref href="Concepts/C_workspace_changes.dita"/>
