--- a/Marvel-Run-User Guide_Abrar.ditamap
+++ b/Marvel-Run-User Guide_Abrar.ditamap
@@ -16,21 +16,22 @@
             <toc/>
         </booklists>
     </frontmatter>
-    <chapter navtitle="Getting Started">
+    <chapter navtitle="Introduction">
         <mapref href="Sridevi-Chapter1/Chapter1.ditamap"/>
     </chapter>
     <chapter navtitle="Using the Navigator">
-        <mapref href="Abrar-Chapter2/Chapter2.ditamap"/>
+        <mapref href="Abrar-Chapter2/Chapter2.ditamap" navtitle="Navigator"/>
     </chapter>
-    <chapter navtitle="Using Workspaces">
+    <chapter navtitle="Workspaces">
         <mapref href="Lisa-Chapter3/Chapter3.ditamap" navtitle="Customizing Workspaces"/>
     </chapter>
-    <chapter navtitle="Customizing Workspaces">
-        <mapref href="Abrar-Chapter5/chapter5.ditamap"/>
+    <chapter navtitle="Custom Workspaces">
+        <mapref href="Abrar-Chapter5/chapter5.ditamap" navtitle="Custom Workspaces"/>
     </chapter>
     <backmatter>
         <booklists>
             <indexlist/>
+            <tablelist/>
         </booklists>
     </backmatter>
 </bookmap>
