--- a/Sridevi-Chapter1/Chapter1.ditamap
+++ b/Sridevi-Chapter1/Chapter1.ditamap
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map>
-    <title>Getting Started</title>
-    <topicref href="Concepts/C_Getting_Started.dita"/>
+    <title>Introduction</title>
+    <topicref href="Concepts/C_getting_started.dita" navtitle="Getting Started"/>
     <topicref href="Concepts/C_New_in_this_release.dita"/>
     <topicref href="Concepts/C_Marvel_Management_Services_Architecture.dita">
-        <topicref href="Concepts/C_Agent.dita"/>
         <topicref href="Concepts/C_Client.dita"/>
-        <topicref href="Concepts/C_Monitoring_Agents.dita"/>
         <topicref href="Concepts/C_Server.dita"/>
+        <topicref href="Concepts/C_Agent.dita"/>
     </topicref>
+    <topicref href="Concepts/C_Monitoring_Agents.dita"/>
     <topicref href="Concepts/C_Features.dita"/>
     <topicref href="Concepts/C_marvel_enterprise_portal_tour.dita">
-        <topicref href="Tasks/T_situations.dita"/>
+        <topicref href="Concepts/C_situations.dita">
+            <topicref href="Tasks/T_situations.dita"/>
+        </topicref>
         <topicref href="Tasks/T_properties.dita"/>
     </topicref>
 </map>
